@startuml
skinparam classAttributeIconSize 0

interface "vscode.RenameProvider" <<interface>> {
    +provideRenameEdits(document, position, newName, token): WorkspaceEdit
    +prepareRename(document, position, token): Range
}

interface "vscode.InlayHintsProvider" <<interface>> {
    +provideInlayHints(document, range, token): InlayHint[]
}

class MasterRenameProvider {
    -frankProvider: FrankRenameProvider
    -sessionProvider: SessionKeyRenameProvider
    +prepareRename(document, position, token): Range
    +provideRenameEdits(document, position, newName, token): WorkspaceEdit
    -isCursorInsideAttributeValue(line, charIndex, regex): boolean
}

class FrankRenameProvider {
    +prepareRename(document, position, token): Range
    +provideRenameEdits(document, position, newName, token): WorkspaceEdit
}

class SessionKeyRenameProvider {
    +prepareRename(document, position, token): Range
    +provideRenameEdits(document, position, newName, token): WorkspaceEdit
}

class FrankRenameHintProvider {
    +register(context): void
    +provideInlayHints(document, range, token): InlayHint[]
}

"vscode.RenameProvider" <|.. MasterRenameProvider
MasterRenameProvider --> FrankRenameProvider : delegates name/path rename\n(adapter-scoped)
MasterRenameProvider --> SessionKeyRenameProvider : delegates sessionKey rename\n(workspace-wide)
"vscode.InlayHintsProvider" <|.. FrankRenameHintProvider
@enduml
